# Estudos

./: .gitignore  LICENSE  README.md
Outros/: mailtemplate.html  rename_files.py  splitfilelist.py
Python/argparse_module/: app.py
Python/async/: README.md
Python/async/src/: code1.py
Python/crypt-fermet/: README.md
Python/django_viewsets_studies/: README.md
Python/django_viewsets_studies/App/: settings.py  urls.py
Python/etl/: README.md  app.py  config.py  pyproject.toml
Python/etl/src/: app.py  config.py  functions.py  log_config.ini
Python/etl/src/files/: recebimento.json  teste.csv
Python/etl/src/sql/: etl.sql
Python/getopt_module/: app.py
Python/imagetopdf/: app.py
Python/imagetotext/: app.py
Python/lexer/: README.md  pyproject.toml
Python/lexer/exemplo/: lex.py
Python/lexer/src/: app.py  core.py  tokens.py
Python/pandas-requests/: app.py  teste.csv
Python/pipelines/: simple.py
Python/python-pandas/: nested_json_to_csv.py  nested_json_to_csv_with_pandas.py  pyproject.toml  teste.csv  vendas.json
Python/python_logging/: README.md  app.py
Python/python_logging/aula/: README.md  app.py  format.py  logger_decorator.py  setup_log.py  simple_log.ini
Python/python_logging/dev.to/: README.md  config.py  example.py
Python/python_logging/testes/: pyproject.toml  test_logging.py
Python/python_yield/: README.md  app.py
Python/testes/pytest-teste/: pyproject.toml
Python/txt_to_postgres/: VENDAS_CARTAO.csv  VENDAS_CARTAO.json  VENDAS_CARTAO.txt  app.py
Security/Livro-Cryptography-and-Network-Security/: README.md
(+66 files in other folders)
