[tool.poetry]
name = "testes"
version = "0.1.0"
description = "pasta de estudos para pytest+logging"
authors = ["Wendrew Oliveira <wendrewdevelop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
